--- a/ResNet.ipynb
+++ b/ResNet.ipynb
@@ -617,7 +617,15 @@
           "name": "stdout",
           "text": [
             "Epoch 1/20\n",
-            "\u001b[1m20/25\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m━━━━\u001b[0m \u001b[1m53s\u001b[0m 11s/step - accuracy: 0.3444 - loss: 3.0489 "
+            "\u001b[1m25/25\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m338s\u001b[0m 12s/step - accuracy: 0.3467 - loss: 3.0227 - val_accuracy: 0.1600 - val_loss: 256080.9531\n",
+            "Epoch 2/20\n",
+            "\u001b[1m25/25\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m284s\u001b[0m 11s/step - accuracy: 0.4049 - loss: 2.7939 - val_accuracy: 0.2700 - val_loss: 90604.9062\n",
+            "Epoch 3/20\n",
+            "\u001b[1m25/25\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m287s\u001b[0m 12s/step - accuracy: 0.3875 - loss: 3.3132 - val_accuracy: 0.1000 - val_loss: 13124.0273\n",
+            "Epoch 4/20\n",
+            "\u001b[1m25/25\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m284s\u001b[0m 11s/step - accuracy: 0.3807 - loss: 4.0748 - val_accuracy: 0.2700 - val_loss: 22643.7402\n",
+            "Epoch 5/20\n",
+            "\u001b[1m25/25\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 11s/step - accuracy: 0.4588 - loss: 3.1477 "
           ]
         }
       ]
