--- a/EfficientNet_B0.ipynb
+++ b/EfficientNet_B0.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOrFEAU7dUdzZ39pkXhB/GH",
+      "authorship_tag": "ABX9TyMn9dv4ZfOwMnqjSlHfF6tb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -702,6 +702,143 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import os\n",
+        "import cv2\n",
+        "import numpy as np\n",
+        "import tensorflow as tf\n",
+        "from tensorflow.keras.utils import to_categorical\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "from tensorflow.keras.applications import EfficientNetB0\n",
+        "from tensorflow.keras.models import Model\n",
+        "from tensorflow.keras.layers import GlobalAveragePooling2D, Dense, Dropout, BatchNormalization\n",
+        "from tensorflow.keras.preprocessing.image import ImageDataGenerator\n",
+        "from tensorflow.keras.callbacks import ReduceLROnPlateau, EarlyStopping\n",
+        "\n",
+        "# Define dataset path\n",
+        "DATASET_PATH = \"OvarianCancer\"\n",
+        "\n",
+        "# Cancer classes (based on folder names)\n",
+        "classes = [\"Mucinous\", \"Non_Cancerous\", \"Endometri\", \"Serous\", \"Clear_Cell\"]\n",
+        "class_mapping = {class_name: i for i, class_name in enumerate(classes)}\n",
+        "\n",
+        "# Image size for EfficientNetB0\n",
+        "IMG_SIZE = 224\n",
+        "\n",
+        "# Lists to store images & labels\n",
+        "X, y = [], []\n",
+        "\n",
+        "# Load images dynamically\n",
+        "for class_name in classes:\n",
+        "    class_path = os.path.join(DATASET_PATH, class_name)\n",
+        "\n",
+        "    if not os.path.exists(class_path):\n",
+        "        continue  # Skip if folder doesn't exist\n",
+        "\n",
+        "    for img_name in os.listdir(class_path):\n",
+        "        img_path = os.path.join(class_path, img_name)\n",
+        "\n",
+        "        img = cv2.imread(img_path)\n",
+        "        if img is None:\n",
+        "            continue  # Skip unreadable images\n",
+        "\n",
+        "        img = cv2.resize(img, (IMG_SIZE, IMG_SIZE))\n",
+        "        X.append(img)\n",
+        "        y.append(class_mapping[class_name])  # Assign label\n",
+        "\n",
+        "# Convert to NumPy arrays\n",
+        "X = np.array(X)\n",
+        "y = to_categorical(y, num_classes=len(classes))  # One-hot encode labels\n",
+        "\n",
+        "# Split into train & test sets\n",
+        "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+        "\n",
+        "print(f\"Dataset loaded: {len(X)} images\")\n",
+        "\n",
+        "# Load pre-trained EfficientNetB0 (B0 is a smaller version)\n",
+        "base_model = EfficientNetB0(weights=\"imagenet\", include_top=False, input_shape=(IMG_SIZE, IMG_SIZE, 3))\n",
+        "\n",
+        "# Unfreeze more layers for fine-tuning\n",
+        "for layer in base_model.layers[-10:]:  # Unfreeze more layers\n",
+        "    layer.trainable = True\n",
+        "\n",
+        "# Add custom layers\n",
+        "x = GlobalAveragePooling2D()(base_model.output)\n",
+        "x = BatchNormalization()(x)\n",
+        "x = Dropout(0.4)(x)  # Adjusted dropout rate\n",
+        "x = Dense(256, activation=\"relu\")(x)\n",
+        "x = Dropout(0.4)(x)\n",
+        "output_layer = Dense(len(classes), activation=\"softmax\")(x)\n",
+        "\n",
+        "# Create model\n",
+        "model = Model(inputs=base_model.input, outputs=output_layer)\n",
+        "\n",
+        "# Compile model\n",
+        "model.compile(optimizer=\"adam\", loss=\"categorical_crossentropy\", metrics=[\"accuracy\"])\n",
+        "\n",
+        "# Data Augmentation\n",
+        "datagen = ImageDataGenerator(\n",
+        "    rotation_range=30,\n",
+        "    zoom_range=0.2,\n",
+        "    width_shift_range=0.2,\n",
+        "    height_shift_range=0.2,\n",
+        "    horizontal_flip=True,\n",
+        "    shear_range=0.2,  # Added shear\n",
+        "    brightness_range=[0.8, 1.2],  # Adjusted brightness\n",
+        "    channel_shift_range=50.0  # Channel shift\n",
+        ")\n",
+        "\n",
+        "train_generator = datagen.flow(X_train, y_train, batch_size=16)\n",
+        "\n",
+        "# Callbacks for learning rate adjustment and early stopping\n",
+        "lr_scheduler = ReduceLROnPlateau(monitor='val_loss', factor=0.5, patience=3, verbose=1)\n",
+        "early_stop = EarlyStopping(monitor='val_loss', patience=5, restore_best_weights=True)\n",
+        "\n",
+        "# Train the model\n",
+        "history = model.fit(train_generator, validation_data=(X_test, y_test), epochs=50,\n",
+        "                    callbacks=[lr_scheduler, early_stop])\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "zyS9CfVZuUpR",
+        "outputId": "e6925a28-5706-47a5-84af-a042f26c75f8"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Dataset loaded: 497 images\n",
+            "Epoch 1/50\n",
+            "\u001b[1m25/25\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m172s\u001b[0m 5s/step - accuracy: 0.3356 - loss: 2.5042 - val_accuracy: 0.4800 - val_loss: 1.4387 - learning_rate: 0.0010\n",
+            "Epoch 2/50\n",
+            "\u001b[1m25/25\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m106s\u001b[0m 4s/step - accuracy: 0.6714 - loss: 1.2075 - val_accuracy: 0.5800 - val_loss: 1.2878 - learning_rate: 0.0010\n",
+            "Epoch 3/50\n",
+            "\u001b[1m25/25\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m141s\u001b[0m 4s/step - accuracy: 0.7638 - loss: 0.8346 - val_accuracy: 0.6700 - val_loss: 1.1231 - learning_rate: 0.0010\n",
+            "Epoch 4/50\n",
+            "\u001b[1m25/25\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m113s\u001b[0m 5s/step - accuracy: 0.7802 - loss: 0.7511 - val_accuracy: 0.7800 - val_loss: 0.8285 - learning_rate: 0.0010\n",
+            "Epoch 5/50\n",
+            "\u001b[1m25/25\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m105s\u001b[0m 4s/step - accuracy: 0.7545 - loss: 0.8309 - val_accuracy: 0.7100 - val_loss: 0.8583 - learning_rate: 0.0010\n",
+            "Epoch 6/50\n",
+            "\u001b[1m 2/25\u001b[0m \u001b[32m━\u001b[0m\u001b[37m━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[1m1:25\u001b[0m 4s/step - accuracy: 0.8906 - loss: 0.5074"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "hd_wQInD_d0k"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
