--- a/Multimodal_DenseNet121.ipynb
+++ b/Multimodal_DenseNet121.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMR5ii+kK8LTZ3X29UI6tzt",
+      "authorship_tag": "ABX9TyNH9oiozetoJ3xJVmlvzVLA",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -376,18 +376,21 @@
     {
       "cell_type": "code",
       "source": [
+        "# Import libraries\n",
         "import os\n",
         "import cv2\n",
         "import numpy as np\n",
-        "import pandas as pd\n",
         "import tensorflow as tf\n",
         "import matplotlib.pyplot as plt\n",
+        "from tensorflow.keras.applications import DenseNet121\n",
+        "from tensorflow.keras.layers import GlobalAveragePooling2D, Dense, Dropout, BatchNormalization\n",
+        "from tensorflow.keras.models import Model\n",
+        "from tensorflow.keras.preprocessing.image import ImageDataGenerator\n",
+        "from tensorflow.keras.callbacks import EarlyStopping, ReduceLROnPlateau, ModelCheckpoint\n",
+        "from tensorflow.keras.utils import to_categorical\n",
         "from sklearn.model_selection import train_test_split\n",
         "from sklearn.preprocessing import StandardScaler\n",
-        "from tensorflow.keras.utils import to_categorical\n",
-        "from tensorflow.keras.applications.densenet import DenseNet121, preprocess_input\n",
-        "from tensorflow.keras import layers, Input, Model\n",
-        "from tensorflow.keras.callbacks import ModelCheckpoint\n",
+        "import pandas as pd\n",
         "\n",
         "# -----------------------------\n",
         "# Load and preprocess image data\n",
@@ -395,7 +398,7 @@
         "IMG_SIZE = 224\n",
         "DATASET_PATH = \"OvarianCancer\"\n",
         "classes = [\"Mucinous\", \"Non_Cancerous\", \"Endometri\", \"Serous\", \"Clear_Cell\"]\n",
-        "class_mapping = {name: i for i, name in enumerate(classes)}\n",
+        "class_mapping = {cls: i for i, cls in enumerate(classes)}\n",
         "\n",
         "X_images, y_labels = [], []\n",
         "\n",
@@ -407,7 +410,7 @@
         "        img = cv2.imread(img_path)\n",
         "        if img is None: continue\n",
         "        img = cv2.resize(img, (IMG_SIZE, IMG_SIZE))\n",
-        "        img = preprocess_input(img)\n",
+        "        img = tf.keras.applications.densenet.preprocess_input(img)\n",
         "        X_images.append(img)\n",
         "        y_labels.append(class_mapping[class_name])\n",
         "\n",
@@ -434,45 +437,84 @@
         ")\n",
         "\n",
         "# -----------------------------\n",
-        "# Build multimodal model (using DenseNet121)\n",
+        "# Data augmentation (for image data)\n",
         "# -----------------------------\n",
-        "image_input = Input(shape=(224, 224, 3), name=\"image_input\")\n",
-        "base_model = DenseNet121(include_top=False, weights=\"imagenet\", input_tensor=image_input, pooling=\"avg\")\n",
-        "x = layers.Dense(128, activation=\"relu\")(base_model.output)\n",
-        "x = layers.Dropout(0.3)(x)\n",
+        "datagen = ImageDataGenerator(\n",
+        "    rotation_range=40,\n",
+        "    zoom_range=0.3,\n",
+        "    width_shift_range=0.2,\n",
+        "    height_shift_range=0.2,\n",
+        "    shear_range=0.2,\n",
+        "    horizontal_flip=True,\n",
+        "    fill_mode='nearest'\n",
+        ")\n",
         "\n",
-        "tabular_input = Input(shape=(X_tabular.shape[1],), name=\"tabular_input\")\n",
-        "y = layers.Dense(64, activation=\"relu\")(tabular_input)\n",
-        "y = layers.Dense(32, activation=\"relu\")(y)\n",
+        "train_generator = datagen.flow(X_train_img, y_train, batch_size=32)\n",
         "\n",
-        "combined = layers.concatenate([x, y])\n",
-        "z = layers.Dense(64, activation=\"relu\")(combined)\n",
-        "output = layers.Dense(len(classes), activation=\"softmax\")(z)\n",
+        "# -----------------------------\n",
+        "# Load DenseNet121 (Image Model)\n",
+        "# -----------------------------\n",
+        "base_model = DenseNet121(weights=\"imagenet\", include_top=False, input_shape=(IMG_SIZE, IMG_SIZE, 3))\n",
         "\n",
-        "model = Model(inputs=[image_input, tabular_input], outputs=output)\n",
-        "model.compile(optimizer=\"adam\", loss=\"categorical_crossentropy\", metrics=[\"accuracy\"])\n",
+        "# Unfreeze deeper layers\n",
+        "for layer in base_model.layers[-30:]:\n",
+        "    layer.trainable = True\n",
+        "\n",
+        "# Custom top layers for image model\n",
+        "x = GlobalAveragePooling2D()(base_model.output)\n",
+        "x = BatchNormalization()(x)\n",
+        "x = Dropout(0.4)(x)\n",
+        "x = Dense(512, activation='relu')(x)\n",
+        "x = Dropout(0.4)(x)\n",
+        "\n",
+        "# -----------------------------\n",
+        "# Tabular Model\n",
+        "# -----------------------------\n",
+        "tab_input = tf.keras.Input(shape=(X_tabular.shape[1],), name=\"tabular_input\")\n",
+        "y = Dense(64, activation=\"relu\")(tab_input)\n",
+        "y = Dense(32, activation=\"relu\")(y)\n",
+        "\n",
+        "# -----------------------------\n",
+        "# Combine Image and Tabular Models\n",
+        "# -----------------------------\n",
+        "combined = tf.keras.layers.concatenate([x, y])\n",
+        "z = Dense(64, activation=\"relu\")(combined)\n",
+        "output = Dense(len(classes), activation=\"softmax\")(z)\n",
+        "\n",
+        "# -----------------------------\n",
+        "# Model compilation\n",
+        "# -----------------------------\n",
+        "model = Model(inputs=[base_model.input, tab_input], outputs=output)\n",
+        "\n",
+        "model.compile(optimizer=tf.keras.optimizers.Adam(learning_rate=1e-4),\n",
+        "              loss='categorical_crossentropy',\n",
+        "              metrics=['accuracy'])\n",
         "\n",
         "# -----------------------------\n",
         "# Callbacks\n",
         "# -----------------------------\n",
-        "checkpoint = ModelCheckpoint(\"best_model_densenet121.h5\", monitor=\"val_accuracy\", save_best_only=True, mode=\"max\", verbose=1)\n",
+        "callbacks = [\n",
+        "    EarlyStopping(monitor='val_accuracy', patience=7, restore_best_weights=True, verbose=1),\n",
+        "    ReduceLROnPlateau(monitor='val_accuracy', factor=0.5, patience=3, min_lr=1e-6, verbose=1),\n",
+        "    ModelCheckpoint(\"best_model_densenet121_multimodal.h5\", monitor='val_accuracy', save_best_only=True, verbose=1)\n",
+        "]\n",
         "\n",
         "# -----------------------------\n",
-        "# Train\n",
+        "# Train the Model\n",
         "# -----------------------------\n",
         "history = model.fit(\n",
         "    [X_train_img, X_train_tab],\n",
         "    y_train,\n",
         "    validation_data=([X_test_img, X_test_tab], y_test),\n",
-        "    epochs=10,\n",
-        "    batch_size=16,\n",
-        "    callbacks=[checkpoint]\n",
+        "    epochs=50,\n",
+        "    batch_size=32,\n",
+        "    callbacks=callbacks\n",
         ")\n",
         "\n",
         "# -----------------------------\n",
-        "# Load best model and evaluate\n",
+        "# Evaluate the Model\n",
         "# -----------------------------\n",
-        "model.load_weights(\"best_model_densenet121.h5\")\n",
+        "model.load_weights(\"best_model_densenet121_multimodal.h5\")\n",
         "loss, acc = model.evaluate([X_test_img, X_test_tab], y_test)\n",
         "print(f\"\\n✅ Best Multimodal Accuracy (DenseNet121): {acc * 100:.2f}%\")\n",
         "\n",
@@ -485,7 +527,7 @@
         "plt.subplot(1, 2, 1)\n",
         "plt.plot(history.history['accuracy'], label=\"Train Acc\")\n",
         "plt.plot(history.history['val_accuracy'], label=\"Val Acc\")\n",
-        "plt.title(\"Accuracy over Epochs (DenseNet121)\")\n",
+        "plt.title(\"Accuracy over Epochs (DenseNet121 Multimodal)\")\n",
         "plt.xlabel(\"Epoch\")\n",
         "plt.ylabel(\"Accuracy\")\n",
         "plt.legend()\n",
@@ -494,7 +536,7 @@
         "plt.subplot(1, 2, 2)\n",
         "plt.plot(history.history['loss'], label=\"Train Loss\")\n",
         "plt.plot(history.history['val_loss'], label=\"Val Loss\")\n",
-        "plt.title(\"Loss over Epochs (DenseNet121)\")\n",
+        "plt.title(\"Loss over Epochs (DenseNet121 Multimodal)\")\n",
         "plt.xlabel(\"Epoch\")\n",
         "plt.ylabel(\"Loss\")\n",
         "plt.legend()\n",
@@ -507,7 +549,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "xCeb0Vf1ibyz",
-        "outputId": "ed935a2d-ffae-47f2-cb3f-a43916fea8f4"
+        "outputId": "14206c11-fca9-45a2-fadd-614b8256a756"
       },
       "execution_count": null,
       "outputs": [
@@ -515,10 +557,63 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Downloading data from https://storage.googleapis.com/tensorflow/keras-applications/densenet/densenet121_weights_tf_dim_ordering_tf_kernels_notop.h5\n",
-            "\u001b[1m29084464/29084464\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 0us/step\n",
-            "Epoch 1/10\n",
-            "\u001b[1m22/25\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m━━━\u001b[0m \u001b[1m36s\u001b[0m 12s/step - accuracy: 0.4183 - loss: 1.5136"
+            "Epoch 1/50\n",
+            "\u001b[1m13/13\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 23s/step - accuracy: 0.2343 - loss: 1.8453 \n",
+            "Epoch 1: val_accuracy improved from -inf to 0.43000, saving model to best_model_densenet121_multimodal.h5\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "WARNING:absl:You are saving your model as an HDF5 file via `model.save()` or `keras.saving.save_model(model)`. This file format is considered legacy. We recommend using instead the native Keras format, e.g. `model.save('my_model.keras')` or `keras.saving.save_model(model, 'my_model.keras')`. \n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\r\u001b[1m13/13\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m424s\u001b[0m 25s/step - accuracy: 0.2386 - loss: 1.8341 - val_accuracy: 0.4300 - val_loss: 1.6025 - learning_rate: 1.0000e-04\n",
+            "Epoch 2/50\n",
+            "\u001b[1m13/13\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 23s/step - accuracy: 0.5710 - loss: 1.1103 \n",
+            "Epoch 2: val_accuracy did not improve from 0.43000\n",
+            "\u001b[1m13/13\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m318s\u001b[0m 24s/step - accuracy: 0.5736 - loss: 1.1048 - val_accuracy: 0.4300 - val_loss: 1.4884 - learning_rate: 1.0000e-04\n",
+            "Epoch 3/50\n",
+            "\u001b[1m13/13\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 22s/step - accuracy: 0.8015 - loss: 0.7049 \n",
+            "Epoch 3: val_accuracy improved from 0.43000 to 0.47000, saving model to best_model_densenet121_multimodal.h5\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "WARNING:absl:You are saving your model as an HDF5 file via `model.save()` or `keras.saving.save_model(model)`. This file format is considered legacy. We recommend using instead the native Keras format, e.g. `model.save('my_model.keras')` or `keras.saving.save_model(model, 'my_model.keras')`. \n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\r\u001b[1m13/13\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m317s\u001b[0m 24s/step - accuracy: 0.8011 - loss: 0.7045 - val_accuracy: 0.4700 - val_loss: 1.3551 - learning_rate: 1.0000e-04\n",
+            "Epoch 4/50\n",
+            "\u001b[1m13/13\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 23s/step - accuracy: 0.8625 - loss: 0.5599 \n",
+            "Epoch 4: val_accuracy improved from 0.47000 to 0.49000, saving model to best_model_densenet121_multimodal.h5\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "WARNING:absl:You are saving your model as an HDF5 file via `model.save()` or `keras.saving.save_model(model)`. This file format is considered legacy. We recommend using instead the native Keras format, e.g. `model.save('my_model.keras')` or `keras.saving.save_model(model, 'my_model.keras')`. \n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\r\u001b[1m13/13\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m323s\u001b[0m 24s/step - accuracy: 0.8611 - loss: 0.5592 - val_accuracy: 0.4900 - val_loss: 1.2202 - learning_rate: 1.0000e-04\n",
+            "Epoch 5/50\n",
+            "\u001b[1m 1/13\u001b[0m \u001b[32m━\u001b[0m\u001b[37m━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[1m6:04\u001b[0m 30s/step - accuracy: 0.8750 - loss: 0.5038"
           ]
         }
       ]
